fix: refactor for cleaner code
use helper methods utility, predicate
rename methods
enhance tests with proper processName value